Diseño de la vista principal de la interfaz

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /GenioPolictenico/nbproject/private/
 /GenioPolictenico/build/
 /GenioPolictenico/dist/
+/GenioPolitecnico/nbproject/private/
+/GenioPolitecnico/build/
+/GenioPolitecnico/dist/
